--- a/css/blog_post.css
+++ b/css/blog_post.css
@@ -35,11 +35,14 @@ ul{
 
 p::first-letter {
     font: 2rem bold Apple Chancery, cursive, sans-serif;
-    color: rgb(53, 51, 55);
+    color: rgb(61, 73, 155);
 }
 
 button{
+    background-color: rgb(228, 228, 243);
     font: 1.5rem Times, Georgia;
+    color: rgb(38, 38, 39);
+    border-radius: 5%;
 }
 
 @media only screen and (min-width:412px) and (max-width:540px) {
