--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,6 @@ nav > ul > li{
     display: block;
     margin: 0 auto;
     padding-top: 10px;
-    float: right;
     border-radius: 15% 15% 15% 15%;
 }
 
@@ -50,6 +49,10 @@ nav > ul > li{
     width: 100%;
     height: 90%;
     border-radius: 5% 5% 0% 0%;
+}
+
+figure{
+    height:90%;
 }
 
 .story{
